--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,124 +10,77 @@
 /**************************************************
 * Columns
 **************************************************/
-/*V2*/
-.header {
-  width: 100%;
-  /*background: url('../img/meth-hero.jpg');*/
-  position: fixed;
-  z-index: 100;
-}
-
-.header__img {
-  padding: 25px;
-  max-width: 350px;
-  float: left;
-}
-
-.header__img img {
-  width: 90%;
-  margin: 0 auto;
-}
-
-.header__options {
-  list-style: none;
-  float: right;
-}
-
-.header__option {
-  float: left;
-  padding: 0 15px;
+/*@import 'style';*/
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+* {
+  font-family: roboto;
 }
 
 .main {
-  display: flex;
-  width: 99%;
-  height: 99%;
-  background: violet;
-  margin: 0 auto;
-  flex-direction: column;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
-  width: auto;
-  max-width: 100%;
-}
-
-.banner {
-  background: red url(./../../img/meth-hero.jpg);
-  background-size: 100%;
-  -moz-background-size: 100%;
-  -o-background-size: 100%;
-  -webkit-background-size: 100%;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
-  width: auto;
-  max-width: 100%;
-  width: 100%;
-  flex: 1;
-  align-content: flex-end;
-  flex-direction: column;
-  display: flex;
-}
-
-.banner__promo {
-  width: 100%;
-  background: green;
-  height: 80px;
-  display: flex;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
-  width: auto;
-  max-width: 100%;
-}
-
-.banner__desc-container {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 200px;
-  background: blue;
-  margin: 0 0 147px 0;
-}
-
-.banner__rel-cont {
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  border-radius: 20px;
-  flex-direction: column;
-  display: flex;
-  position: relative;
-  width: 50%;
-  background: red;
-  max-height: 400px;
   -ms-flex-preferred-size: 0;
   flex-basis: 0;
   -ms-flex-positive: 1;
   flex-grow: 1;
   max-width: 100%;
-  margin: 0 auto;
+  height: 760px;
+  background: blue;
 }
 
-.banner__img {
-  position: absolute;
-  z-index: -10;
+.banner {
+  display: flex;
+  background: url(../../img/meth-hero.jpg);
+  height: 600px;
+  flex-direction: column;
+  align-items: flex-end;
+  background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
+  -webkit-background-size: 100%;
+  text-align: center;
 }
 
-.banner__img img {
-  width: 100%;
+.banner-h1 {
+  font-size: 1.4em;
 }
 
-.banner__img-cont {
-  background: red;
-  width: 100%;
-  height: 100%;
+.banner__info {
+  background: burlywood;
+  display: flex;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  width: auto;
+  max-width: 100%;
+  height: 200px;
+  width: 50%;
+  margin: 300px auto 0 auto;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  flex-direction: column;
 }
 
-.banner__title {
-  font-size: 3em;
+.banner-info {
+  color: #1a7348;
+  font-family: "Roboto", sans-serif;
+}
+
+.banner-promo {
   color: white;
-  z-index: 100;
+  font-size: 1.1em;
 }
 
-/*/V2*/
+.banner__promo {
+  background: green;
+  height: 120px;
+  width: 100%;
+  margin: -20px 0 0 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.promo-button {
+  text-align: right;
+}
 
 /*# sourceMappingURL=style.css.map */
